--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,9 @@ body {
 }   
 
 html {
+
+    scroll-behavior: smooth;
+
     /*scroll-snap-type: mandatory;*/
     /*scroll-snap-points-y: repeat(300px);
     scroll-snap-type: y mandatory;
