--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,6 +104,7 @@ html {
 .portfolio {
     justify-content: center;
     align-items: center;
+    padding-right: 10em;
 
 }
 
@@ -159,6 +160,7 @@ html {
     height: 50em;
 }
 .menu-button {
+    margin-top:20px;
     font-size: 150%;
     max-block-size:100%;
     size: 50px;
@@ -194,8 +196,15 @@ html {
     animation: button-hover 0.2s linear forwards;
 }
 
+
 .buttons {
-    margin-top: 20px;
+
+    width: 100%;
+    height:5em;
+    background: #1D1D1D;
+
+
+    margin-top: -20px;
     margin-left: 100px;
     position: fixed;
     
@@ -213,7 +222,7 @@ html {
     }
     /*Portfolio items*/
     .list-desc {
-        font-size: 120%;
+        font-size: 80%;
     }
 
 
